# vending-kowen

./: .gitignore  README.md
apps/customer-app/: app.js  index.html  manifest.json  package.json  styles.css
apps/customer-app/api/: buy-pack.js  machine-status.js  mp-webhook.js  redeem-code.js  redeem.js  resolve-code.js  topup.js
apps/customer-app/db/: schema.sql
apps/dashboard/: .env.example  README.md  app.py  cloud_sync.py  kowen-dashboard.service
apps/dashboard/templates/: index.html
apps/edge-water/: .env.example  README.md  pyproject.toml
apps/edge-water/src/edge_water/: __main__.py  app.py  cli.py  config.py  dispenser.py  messages.py
apps/edge-water/src/edge_water/bus/: __init__.py  base.py  memory.py  mqtt.py
apps/edge-water/src/edge_water/hardware/: __init__.py  base.py  mock.py  real.py
apps/edge-water/tests/: conftest.py  test_bus.py  test_dispenser.py  test_e2e.py
apps/fleet-watcher/: .env.example  README.md  fleet-watcher.service  setup.sh  watcher.py
docs/: BOM.md  TASKS.md  compras_dia1.md  compras_primera_maquina.md  dashboard_design.md  day_1_taller.md  estado_actual.md  logica_operacion.md  pinout_definitivo.md  presentacion-kowen.html  wiring_diagram.md
mockups/: dashboard.html
scripts/: activate_all.py  diag_pump_module.py  dispense_test.py  fill_bottle.py  flush.py  manual_relay.py  produce_water.py  setup_cloud.sh  test_all_channels.py  test_ch7_long.py  test_pump_module.py  test_sensores_a_reles.py  test_sensors.py
