[project]
name = "edge-water"
version = "0.1.0"
description = "Edge firmware for water vending dispenser (Raspberry Pi)"
requires-python = ">=3.11"
dependencies = [
    "aiomqtt>=2.3.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "rich>=13.7",
    "typer>=0.12",
    "loguru>=0.7",
]

[project.optional-dependencies]
hardware = [
    "gpiozero>=2.0",
    "pigpio>=1.78",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
]

[project.scripts]
edge-water = "edge_water.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edge_water"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 10

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
